--- a/index.html
+++ b/index.html
@@ -136,29 +136,44 @@
           <h2 class="section-headline">Czym sie zajmujemy?</h2>
           <ul class="section-working-kind">
             <li>
-              <img
-                src="images/img1.jpg"
-                alt="Programista pracuje na komputerze"
-                width="370"
-                height="294"
-              />
+              <figure>
+                <img
+                  src="images/img1.jpg"
+                  alt="Programista pracuje na komputerze"
+                  width="370"
+                  height="294"
+                />
+                <figcaption>
+                  <p>Aplikacje komputerowe</p>
+                </figcaption>
+              </figure>
             </li>
             <li>
-              <img
-                src="images/img2.jpg"
-                alt="Programista sprawdza wygląd strony na
+              <figure>
+                <img
+                  src="images/img2.jpg"
+                  alt="Programista sprawdza wygląd strony na
       telefonie komórkowym"
-                width="370"
-                height="294"
-              />
+                  width="370"
+                  height="294"
+                />
+                <figcaption>
+                  <p>Aplikacje mobilne</p>
+                </figcaption>
+              </figure>
             </li>
             <li>
-              <img
-                src="images/img3.jpg"
-                alt="Programista sprawdza paletę kolorów"
-                width="370"
-                height="294"
-              />
+              <figure>
+                <img
+                  src="images/img3.jpg"
+                  alt="Programista sprawdza paletę kolorów"
+                  width="370"
+                  height="294"
+                />
+                <figcaption>
+                  <p>Rozwiązania graficzne</p>
+                </figcaption>
+              </figure>
             </li>
           </ul>
         </div>
