--- a/portfolio.html
+++ b/portfolio.html
@@ -87,6 +87,9 @@
         <ul class="about-all-projects-list">
           <li>
             <figure>
+              <div class="about-projects-description">
+                <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+              </div>
               <img
                 src="./images/img8.jpg"
                 alt="Technocrack"
@@ -101,6 +104,9 @@
           </li>
           <li>
             <figure>
+              <div class="about-projects-description">
+                <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+              </div>
               <img
                 src="./images/img9.jpg"
                 alt="Grafika New Orlean vs Golden Star"
@@ -117,6 +123,9 @@
           </li>
           <li>
             <figure>
+              <div class="about-projects-description">
+                <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+              </div>
               <img
                 src="./images/img10.jpg"
                 alt="Restauracja Seafood"
@@ -131,6 +140,9 @@
           </li>
           <li>
             <figure>
+              <div class="about-projects-description">
+                <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+              </div>
               <img
                 src="./images/img11.jpg"
                 alt="Projekt Prime"
@@ -145,6 +157,9 @@
           </li>
           <li>
             <figure>
+              <div class="about-projects-description">
+                <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+              </div>
               <img
                 src="./images/img12.jpg"
                 alt="Projekt Boxes"
@@ -152,6 +167,7 @@
                 height="294"
               />
               <figcaption>
+  
                 <p class="about-projects-title">Projekt Boxes</p>
                 <p class="about-projects-type">Aplikacja</p>
               </figcaption>
@@ -159,6 +175,9 @@
           </li>
           <li>
             <figure>
+              <div class="about-projects-description">
+                <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+              </div>
               <img
                 src="./images/img13.jpg"
                 alt="Inspiration has no Borders"
@@ -173,6 +192,9 @@
           </li>
           <li>
             <figure>
+              <div class="about-projects-description">
+                <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+              </div>
               <img
                 src="./images/img14.jpg"
                 alt="Magazyn Limited Edition"
@@ -180,6 +202,7 @@
                 height="294"
               />
               <figcaption>
+
                 <p class="about-projects-title">Magazyn Limited Edition</p>
                 <p class="about-projects-type">Dizajn</p>
               </figcaption>
@@ -187,6 +210,9 @@
           </li>
           <li>
             <figure>
+              <div class="about-projects-description">
+                <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+              </div>
               <img
                 src="./images/img15.jpg"
                 alt="Projekt LAB"
@@ -201,6 +227,9 @@
           </li>
           <li>
             <figure>
+              <div class="about-projects-description">
+                <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+              </div>
               <img
                 src="./images/img16.jpg"
                 alt="Growing Business"
@@ -208,6 +237,7 @@
                 height="294"
               />
               <figcaption>
+
                 <p class="about-projects-title">Growing Business</p>
                 <p class="about-projects-type">Aplikacja</p>
               </figcaption>
